[project]
name = "picorescue"
version = "0.1.0"
description = "Inspect and recover LittleFS/FAT partitions from Raspberry Pi Pico flash dumps"
readme = "README.md"
authors = [
    { name = "Phil Howard", email = "github@gadgetoid.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "littlefs-python>=0.12",
]

[project.scripts]
picorescue = "picorescue.cli:cli"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"
